vlib/v/checker/tests/aliased_optional_fn_call_err.vv
type OptStr = ?string

fn foo() OptStr{
	return 'abc'
}

fn main(){
	println(foo())
}
